--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1024</width>
+    <height>768</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,10 +17,10 @@
    <widget class="QLabel" name="l_triangles">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>330</y>
-      <width>361</width>
-      <height>71</height>
+      <x>30</x>
+      <y>670</y>
+      <width>261</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -32,19 +32,36 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <widget class="WidgetGL" name="widgetGL" native="true">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>1000</width>
+      <height>660</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1024</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>WidgetGL</class>
+   <extends>QWidget</extends>
+   <header>WidgetGL.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
