--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -15,14 +15,7 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="2">
-     <widget class="QPushButton" name="pB_CutUp">
-      <property name="text">
-       <string>UP</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" colspan="4">
+    <item row="0" column="0" colspan="6">
      <widget class="QSplitter" name="splitter">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -38,6 +31,27 @@
       </widget>
      </widget>
     </item>
+    <item row="1" column="4">
+     <widget class="QPushButton" name="pB_Srlzd">
+      <property name="text">
+       <string>Ser</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QPushButton" name="pB_Cut">
+      <property name="text">
+       <string>Cut</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QPushButton" name="pB_CutUp">
+      <property name="text">
+       <string>UP</string>
+      </property>
+     </widget>
+    </item>
     <item row="1" column="0">
      <widget class="QLabel" name="l_triangles">
       <property name="font">
@@ -47,13 +61,6 @@
       </property>
       <property name="text">
        <string>TextLabel</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="pB_Cut">
-      <property name="text">
-       <string>Cut</string>
       </property>
      </widget>
     </item>
