--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -143,6 +143,42 @@
      <string>MPReArr</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pB_zmq">
+    <property name="geometry">
+     <rect>
+      <x>1060</x>
+      <y>850</y>
+      <width>111</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>ZMQ</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="l_zmq">
+    <property name="geometry">
+     <rect>
+      <x>1040</x>
+      <y>910</y>
+      <width>151</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>---</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
