--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -100,7 +100,7 @@
    <widget class="QPushButton" name="pB_Table">
     <property name="geometry">
      <rect>
-      <x>1030</x>
+      <x>1060</x>
       <y>530</y>
       <width>89</width>
       <height>25</height>
@@ -146,9 +146,9 @@
    <widget class="QPushButton" name="pB_zmq">
     <property name="geometry">
      <rect>
-      <x>1060</x>
-      <y>850</y>
-      <width>111</width>
+      <x>980</x>
+      <y>660</y>
+      <width>291</width>
       <height>51</height>
      </rect>
     </property>
@@ -160,23 +160,63 @@
      </font>
     </property>
     <property name="text">
-     <string>ZMQ</string>
+     <string>Server</string>
     </property>
    </widget>
-   <widget class="QLabel" name="l_zmq">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>1040</x>
-      <y>910</y>
-      <width>151</width>
-      <height>20</height>
+      <x>980</x>
+      <y>590</y>
+      <width>291</width>
+      <height>61</height>
      </rect>
     </property>
-    <property name="text">
-     <string>---</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>IP</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>port</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLineEdit" name="lE_ip">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>127.0.0.1</string>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="lE_port">
+       <property name="text">
+        <string>1100</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QPlainTextEdit" name="pTE_serv">
+    <property name="geometry">
+     <rect>
+      <x>980</x>
+      <y>730</y>
+      <width>291</width>
+      <height>201</height>
+     </rect>
     </property>
    </widget>
   </widget>
