Moving camera UP/DOWN

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -119,6 +119,9 @@
       <height>946</height>
      </rect>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::StrongFocus</enum>
+    </property>
    </widget>
    <widget class="QTableWidget" name="tabProp">
     <property name="geometry">
